--- a/index.html
+++ b/index.html
@@ -1,66 +1,87 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+<pre style="font-size: 16px;">
+😎<b>Ramani Harashil</b>
+<b>Github</b> = <a href="https://github.com/hr097">hr097</a>
+<b>linkedin</b> = <a href="https://www.linkedin.com/in/harshil-ramani-2b528920b/">Harshil Ramani</a>
+
+😎<b>Shubham Khunt</b>
+<b>Github</b> = <a href="https://github.com/ShubhamKhunt1872003">Shubhamkhunt1872003</a>
+<b>linkedin</b> = <a href="https://www.linkedin.com/in/shubham-khunt/">Shubham Khunt</a>
+
 404 - File Not found on the server
 503 - Something went wrong while cropping and making new PDF
 200 - All Okay
 
 API Documentataion:
 
-1) PDF PROCESSING REQUET
- 
-    URL:   https://cropbox.onrender.com/upload
-    TYPE: POST
-    INPUT:
-    (multipart/form-data)
+<b>1) PDF PROCESSING REQUET</b>
 
-    name="filename" =======> value = __filename__.pdf
-    name="type"  ====> value = Meesho / Flipkart
-   
-    (USe html form & Dropdown to upload file and select type on frontend)
+    <b>URL 1:</b>   https://cropbox.onrender.com/upload-for-meesho
+    <b>URL 2:</b>   https://cropbox.onrender.com/upload-for-flipkart
+    <b>TYPE:</b>  POST
+    <b>INPUT:</b>
 
-    RESPONSE:
+    <b>(multipart/form-data)</b>
+    <b>name="filename" =======> value = filename.pdf</b>
 
-    ON SUCCESS:
+
+    <b>RESPONSE:</b>
+
+    <b>ON SUCCESS:</b>
     {
         "status": true,
         "code": 200,
         "message": "Processed",
-        "filename": "__PROCESSED-FILENAME__.pdf"
+        "filename": "PROCESSED-FILENAME.pdf"
     }
 
-    ON FAILURE:
+    <b>ON FAILURE:</b>
     {'status': True,'code': 503,'message': 'Something Went Wring! Please Try Again Later'}
 
-2) PDF GETTING REQUET
+<b>2) PDF GETTING REQUET</b>
  
-    URL:   https://cropbox.onrender.com/get-pdf
-    TYPE: POST
+    <b>URL:   https://cropbox.onrender.com/get-pdf</b>
+    <b>TYPE: POST</b>
 
     INPUT: (same name as above API responded)
     {
-        "filename":"__PROCESSED-FILENAME__.pdf" 
+        "filename":"PROCESSED-FILENAME.pdf" 
     }
 
-    RESPONSE:
+    <b>RESPONSE:</b>
 
-    ON SUCCESS:
-    __PROCESSED-FILENAME__.pdf (Entire file as response)
 
-    ON FAILURE:
+    <b>ON SUCCESS:</b>
+    PROCESSED-FILENAME.pdf (Entire file as response)
+
+    <b>ON FAILURE:</b>
     {'status': True,'code': 503,'message': 'Something Went Wring! Please Try Again Later'}
 
-3) DELETE GENERATED FILE (Necessary Because it cerated loads on server)
+<b>3) DELETE GENERATED FILE (Necessary Because it cerated loads on server)</b>
 
-    URL:   https://cropbox.onrender.com/delete
-    TYPE: POST
+    <b>URL:   https://cropbox.onrender.com/delete</b>
+    <b>TYPE: POST</b>
 
     INPUT: (same name as above 1st API responded)
     {
-        "filename":"__PROCESSED-FILENAME__.pdf" 
+        "filename":"PROCESSED-FILENAME.pdf" 
     }
 
-    RESPONSE:
+    <b>RESPONSE:</b>
 
-    ON SUCCESS:
+    <b>ON SUCCESS:</b>
     {"status": True,"code": 200,"message": "Deleted!"}
 
-    ON FAILURE:
+    <b>ON FAILURE:</b>
     {"status": True,"code": 404,"message": "File not found!"}
+</pre>
+</body>
+</html>
